--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "react-search-autocomplete": "^8.2.1",
     "stream-http": "^3.2.0",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4",
