--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
     "body-parser": "^1.20.1",
+    "bootstrap": "^5.2.3",
     "cookie-parser": "^1.4.6",
     "css-loader": "^6.7.2",
     "express-session": "^1.17.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "stream-http": "^3.2.0",
