--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.2.0",
     "body-parser": "^1.20.1",
+    "cdbreact": "^1.5.3",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
     "react-search-autocomplete": "^8.2.1"
