--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "css-loader": "^6.7.2",
     "express-session": "^1.17.3",
     "moment": "^2.29.4",
+    "primeicons": "^6.0.1",
+    "primereact": "^8.7.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-datepicker": "^4.8.0",
